# my-daplinker

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  configure.sh  configure_on_subtree.sh  flash_bootloader.sh  flash_mydemo.sh
cfg/openocdconfig/: daplink_stm32f103c8t6.cfg  stlink_stm32f103c8t6.cfg
docs/md/: COMPILE.md
software/: .gitignore  CMakeLists.txt  README.md  check_board_info.sh  configure.sh  flash_bootloader.sh  flash_interface.sh
software/DAPLink/: CMakeLists.txt  README.md  configure.sh  flash_bootloader.sh  flash_interface.sh
software/daplink/: README.md  flash_bl.sh  flash_erase.sh  flash_if.sh
software/lib/: ArmNoneEabiGcc.cmake  DAPLink.cmake  post_build_script_gcc.py  pre_build_script.py  progen.cmake
software/my_daplink_v1/: .gitignore  CMakeLists.txt  flash.sh
software/my_daplink_v1/source/hic_hal/stm32/stm32f103xb/: IO_Config.h
software/my_demo/: .cproject  .mxproject  CMakeLists.txt  README.md  build.sh  configure.sh  flash.sh  flash_8_daplink.sh  flash_8_stlink.sh  my_demo.ioc  openocd.cfg
software/my_demo/Core/Inc/: main.h
software/my_demo/Core/Src/: gpio.c  main.c
software/web-view/: README.md  package.json
